--- a/CSS-HTML-projects/social-proof/style.css
+++ b/CSS-HTML-projects/social-proof/style.css
@@ -26,23 +26,21 @@ body {
 }
 
 .container {
-  /* min-height: 100vh; */
+  min-height: 100vh;
   display: grid;
-  grid-template-columns:
-    [container-start] 1fr [center-start] repeat(10, [col-start] 1fr [col-end])
-    [center-end] 1fr [container-end];
+  grid-template-columns: repeat(
+    12,
+    [col-start] minmax(min-content, 1fr) [col-end]
+  );
   grid-template-rows: repeat(2, 1fr) min-content;
 }
 
 .product {
-  grid-column: center-start / center-end;
-  grid-row: inherit;
-  padding: 15vh 0 5vh 0;
-
+  grid-column: col-start 2 / col-end 11;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: auto;
-  place-content: end center;
+  place-content: center;
   grid-column-gap: 5vw;
 }
 
@@ -51,8 +49,6 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* width: 100%;
-  height: 100%; */
 }
 
 .product__details--title {
@@ -110,8 +106,9 @@ body {
 }
 
 .testimonial {
-  grid-column: center-start / center-end;
-  padding: 5vh 0 2vh 0;
+  grid-column: col-start 2 / col-end 11;
+  /* padding-top: 5vh; */
+  place-content: start center;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: auto;
@@ -121,7 +118,7 @@ body {
 
 .testimonial__card {
   width: 100%;
-  height: 50%;
+  height: 100%;
   background-color: var(--color-primary);
   border-radius: 1rem;
   color: var(--color-neutral);
@@ -181,16 +178,20 @@ body {
   word-spacing: 0.2rem;
 }
 .footer {
-  grid-column: container-start / container-end;
-  padding: 2rem;
+  grid-column: col-start 1 / col-end 12;
+  padding: 1.5rem;
   background-color: var(--color-primary-dark);
+  font-size: 1.3rem;
 
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .attribution {
   color: white;
+  text-align: center;
+  line-height: 1.5;
 }
 
 .attribution a {
@@ -198,3 +199,15 @@ body {
 }
 
 /* Media Queries */
+@media screen and (max-width: 400px) {
+  .container {
+    grid-template-columns: repeat(
+      4,
+      [col-start] minmax(min-content, 1fr) [col-end]
+    );
+  }
+
+  .footer {
+    grid-column: col-start 1 / col-end 4;
+  }
+}
