--- a/CSS-HTML-projects/testimonials-grid/style.css
+++ b/CSS-HTML-projects/testimonials-grid/style.css
@@ -10,5 +10,165 @@
 /* UTILITIES */
 :root {
   font-size: 62.5%;
-  font-family: ;
+  font-family: 'Barlow Semi Condensed', sans-serif;
+
+  /* Custom Properties */
+  --color-primary: #48556a;
+  --color-primary-dark: #19212e;
+  --color-secondary: #7541c8;
+  --color-neutral: #ffffff;
+  --color-neutral-dark: #cfcfcf;
+  --color-neutral-light: #ecf2f8;
+}
+
+a:link,
+a:visited {
+  text-decoration: none;
+}
+
+body {
+  min-height: 100vh;
+  font-size: 1.3rem;
+  background-color: var(--color-neutral-light);
+}
+
+.container {
+  display: grid;
+  grid-template-columns: [col-start] repeat(12, minmax(min-content, 1fr)) [col-end];
+  grid-template-rows: 1fr min-content;
+}
+
+.testimonial {
+  grid-column: col-start 1 / col-end 12;
+
+  margin: 10rem;
+  display: grid;
+  grid-template-columns: repeat(4, minmax(25rem, 28rem));
+  grid-template-rows: repeat(2, minmax(25%, 35%));
+  place-content: center;
+  grid-gap: 2rem;
+}
+
+.testimonial__card {
+  padding: 3rem;
+
+  border-radius: 2rem;
+
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+}
+
+.testimonial__card--1 {
+  grid-column: 1 / 3;
+  background-color: var(--color-secondary);
+  color: var(--color-neutral);
+}
+
+.testimonial__card--2 {
+  background-color: var(--color-primary);
+  color: var(--color-neutral);
+}
+
+.testimonial__card--3 {
+}
+
+.testimonial__card--4 {
+  grid-column: 2 / 4;
+  background-color: var(--color-primary-dark);
+  color: var(--color-neutral);
+}
+
+.testimonial__card--5 {
+  grid-column: 4 / 5;
+  grid-row: 1 / 3;
+}
+
+.testimonial__card--3,
+.testimonial__card--5 {
+  background-color: var(--color-neutral);
+  color: var(--color-primary);
+}
+.testimonial__card--header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+.testimonial__card--header__profile {
+  margin-right: 2rem;
+}
+
+.testimonial__card--header__profile img {
+  height: 3rem;
+  width: 3rem;
+  border-radius: 50%;
+}
+
+.testimonial__card--content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  height: 100%;
+}
+
+.testimonial__card--header__content p:first-child {
+  margin-bottom: 0.3rem;
+}
+
+.testimonial__card--content__summary {
+  font-size: 2rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+
+.testimonial__card--content__details {
+  line-height: 1.5;
+  word-spacing: 0.1rem;
+}
+
+.testimonial__card--content__details,
+.testimonial__card--header__content p:last-child {
+  opacity: 50%;
+}
+
+.footer {
+  grid-column: col-start 1 / col-end 12;
+  padding: 1.5rem;
+  background-color: var(--color-primary-dark);
+  color: white;
+}
+
+.footer p {
+  letter-spacing: 0.1rem;
+  line-height: 1.7;
+  font-size: 1.5rem;
+}
+
+/* Media Queries */
+@media screen and (max-width: 900px) {
+  .container {
+    grid-template-columns: [col-start] repeat(12, minmax(min-content, 1fr)) [col-end];
+  }
+
+  .testimonial {
+    grid-column: col-start 1 / col-end 8;
+  }
+
+  .footer {
+    grid-column: col-start 1 / col-end 8;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    grid-template-columns: [col-start] repeat(4, minmax(min-content, 1fr)) [col-end];
+  }
+
+  .testimonial {
+    grid-column: col-start 1 / col-end 4;
+  }
+
+  .footer {
+    grid-column: col-start 1 / col-end 4;
+  }
 }
