Added box-shawdow to the testimonial cards

--- a/CSS-HTML-projects/testimonials-grid/style.css
+++ b/CSS-HTML-projects/testimonials-grid/style.css
@@ -54,6 +54,8 @@ body {
 .testimonial__card {
   padding: calc(1rem + 1vw) calc(1.5rem + 1vw);
 
+  box-shadow: 0.4rem 0.5rem 2rem 0.4rem var(--color-neutral-dark);
+
   border-radius: 2rem;
 
   display: flex;
