--- a/CSS-HTML-projects/social-proof/style.css
+++ b/CSS-HTML-projects/social-proof/style.css
@@ -21,132 +21,119 @@
 }
 
 body {
-  font-size: 1.5rem;
-  background-color: var(--color-primary-light);
+  min-height: 100vh;
+  font-size: 1.3rem;
 }
 
 .container {
-  min-height: 100vh;
   display: grid;
-  grid-template-columns: repeat(
-    12,
-    [col-start] minmax(min-content, 1fr) [col-end]
-  );
+  grid-template-columns: repeat(12, [col-start] 1fr [col-end]);
   grid-template-rows: repeat(2, 1fr) min-content;
+}
+
+a:link,
+a:visited {
+  text-decoration: none;
 }
 
 .product {
   grid-column: col-start 2 / col-end 11;
+
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: auto;
+  grid-template-rows: repeat(auto-fill, auto-fit);
   place-content: center;
-  grid-column-gap: 5vw;
+  grid-gap: 2.4rem;
 }
 
 .product__details {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
 
 .product__details--title {
+  font-size: 5rem;
   font-weight: 700;
-  font-size: calc(2.5rem + 2vw);
   line-height: 1.2;
   color: var(--color-primary);
-  margin-bottom: 2rem;
+  margin-bottom: calc(1rem + 1vw);
 }
 
 .product__details--para {
-  font-size: 1.5rem;
   color: var(--color-primary-dark);
+  line-height: 2;
+  font-weight: 400;
+  font-size: 1.5rem;
 }
 
 .product__reviews {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: start;
-  width: 100%;
-  height: 100%;
 }
 
 .product__reviews--card {
-  width: inherit;
-  background-color: var(--color-primary-dark);
+  background-color: var(--color-primary-light);
   border-radius: 0.5rem;
   display: flex;
   align-items: center;
+  padding: 1.5rem;
+  width: 90%;
 }
 
 .product__reviews--card-1,
 .product__reviews--card-2,
 .product__reviews--card-3 {
-  padding: 1.5rem;
   margin-bottom: 1.5rem;
 }
 
 .product__reviews--card-2 {
-  margin-left: 3rem;
+  margin-left: 5%;
 }
 
 .product__reviews--card-3 {
-  margin-left: 8rem;
+  margin-left: 10%;
 }
 
 .product__reviews--card__rating {
   margin-right: 3rem;
 }
 
-.product__reviews--card__text p {
+.product__reviews--card__text {
+  font-weight: 600;
   color: var(--color-primary);
-  font-weight: 500;
+  font-size: 1.3rem;
 }
 
 .testimonial {
   grid-column: col-start 2 / col-end 11;
-  /* padding-top: 5vh; */
-  place-content: start center;
+
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: auto;
-  place-items: start center;
-  grid-column-gap: 2vw;
+  grid-template-rows: repeat(auto-fill, minmax(min-content, 12rem));
+  grid-gap: 2.4rem;
+  place-items: center;
 }
 
 .testimonial__card {
-  width: 100%;
-  height: 100%;
   background-color: var(--color-primary);
-  border-radius: 1rem;
-  color: var(--color-neutral);
+  border-radius: 0.5rem;
 
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  color: var(--color-neutral);
+  padding: 3rem;
 }
 
-.testimonial__card-1,
-.testimonial__card-2,
-.testimonial__card-3 {
-  padding: 0 3rem;
-  margin-right: 2rem;
-}
-
-.testimonial__card-2 {
-  margin-top: 2rem;
-}
-
-.testimonial__card-3 {
-  margin-top: 4rem;
+.testimonial__card--1,
+.testimonial__card--2,
+.testimonial__card--3 {
 }
 
 .testimonial__card--header {
-  margin-bottom: 1.5rem;
   display: flex;
   align-items: center;
+  margin-bottom: 2rem;
 }
 
 .testimonial__card--header__profile {
@@ -154,59 +141,62 @@ body {
 }
 
 .testimonial__card--header__profile img {
-  width: 5rem;
-  height: 5rem;
+  height: 4rem;
+  width: 4rem;
   border-radius: 50%;
-  object-fit: cover;
-  object-position: center;
 }
 
-.testimonial__card--header__content p:first-child {
-  font-weight: 500;
+.testimonial__card--header__content h3 {
   font-size: 1.3rem;
-  margin-bottom: 0.5rem;
+  letter-spacing: 0.1rem;
 }
-
-.testimonial__card--header__content p:last-child {
-  font-weight: 500;
-  font-size: 1.3rem;
+.testimonial__card--header__content p {
+  margin-top: 0.3rem;
   color: var(--color-secondary);
+  opacity: 0.5;
 }
 
-.testimonial__card--content__para {
-  font-size: 1.3rem;
-  word-spacing: 0.2rem;
+.testimonial__card--para {
+  opacity: 0.8;
+  line-height: 2;
 }
+
 .footer {
   grid-column: col-start 1 / col-end 12;
   padding: 1.5rem;
   background-color: var(--color-primary-dark);
-  font-size: 1.3rem;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .attribution {
-  color: white;
   text-align: center;
+  color: white;
   line-height: 1.5;
 }
 
 .attribution a {
-  text-decoration: none;
+  color: var(--color-secondary);
 }
 
 /* Media Queries */
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 900px) {
   .container {
-    grid-template-columns: repeat(
-      4,
-      [col-start] minmax(min-content, 1fr) [col-end]
-    );
+    grid-template-columns: repeat(8, [col-start] 1fr [col-end]);
   }
 
+  .product,
+  .testimonial,
+  .footer {
+    grid-column: col-start 1 / col-end 8;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    grid-template-columns: repeat(4, [col-start] 1fr [col-end]);
+  }
+
+  .product,
+  .testimonial,
   .footer {
     grid-column: col-start 1 / col-end 4;
   }
