completed responsiveness for mobile devices

--- a/CSS-HTML-projects/social-proof/style.css
+++ b/CSS-HTML-projects/social-proof/style.css
@@ -40,8 +40,9 @@ a:visited {
   grid-column: col-start 2 / col-end 11;
 
   display: grid;
+  margin: calc(2rem + 2.5vw);
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(auto-fill, auto-fit);
+  grid-template-rows: repeat(1, auto-fit);
   place-content: center;
   grid-gap: 2.4rem;
 }
@@ -54,7 +55,6 @@ a:visited {
 .product__details--title {
   font-size: 5rem;
   font-weight: 700;
-  line-height: 1.2;
   color: var(--color-primary);
   margin-bottom: calc(1rem + 1vw);
 }
@@ -96,13 +96,13 @@ a:visited {
 }
 
 .product__reviews--card__rating {
-  margin-right: 3rem;
+  margin-right: calc(1.5rem + 0.5vw);
 }
 
 .product__reviews--card__text {
-  font-weight: 600;
   color: var(--color-primary);
-  font-size: 1.3rem;
+  font-size: 1.2rem;
+  font-weight: 600;
 }
 
 .testimonial {
@@ -199,5 +199,63 @@ a:visited {
   .testimonial,
   .footer {
     grid-column: col-start 1 / col-end 4;
+  }
+
+  .product,
+  .testimonial {
+    margin: 3rem 2rem;
+    grid-gap: 1.6rem;
+  }
+
+  .product {
+    grid-template-columns: repeat(1, 1fr);
+    margin-bottom: unset;
+  }
+
+  .product__details {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+
+  .product__details--title {
+    text-align: center;
+    font-size: 4rem;
+    margin-bottom: calc(1rem + 1vw);
+  }
+
+  .product__details--para {
+    line-height: 2.7;
+    font-size: 1.3rem;
+  }
+
+  .product__reviews {
+    align-items: center;
+  }
+
+  .product__reviews--card {
+    flex-direction: column;
+    width: 100%;
+    padding: 1.3rem;
+  }
+
+  .product__reviews--card__rating {
+    margin-right: unset;
+    margin-bottom: 1rem;
+  }
+
+  .product__reviews--card-2 {
+    margin-left: unset;
+  }
+
+  .product__reviews--card-3 {
+    margin-left: unset;
+  }
+
+  .testimonial {
+    grid-template-columns: repeat(1, 1fr);
+    margin-top: initial;
+    margin-bottom: 5rem;
   }
 }
