--- a/CSS-HTML-projects/social-proof/style.css
+++ b/CSS-HTML-projects/social-proof/style.css
@@ -41,6 +41,7 @@ a:visited {
 
   display: grid;
   margin: calc(2rem + 2.5vw);
+  margin-bottom: none;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(1, auto-fit);
   place-content: center;
@@ -108,6 +109,9 @@ a:visited {
 .testimonial {
   grid-column: col-start 2 / col-end 11;
 
+  margin: calc(2rem + 2.5vw);
+  margin-top: -5rem;
+
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(auto-fill, minmax(min-content, 12rem));
@@ -125,9 +129,12 @@ a:visited {
   padding: 3rem;
 }
 
-.testimonial__card--1,
-.testimonial__card--2,
+.testimonial__card--2 {
+  margin-top: 5%;
+}
+
 .testimonial__card--3 {
+  margin-top: 15%;
 }
 
 .testimonial__card--header {
@@ -187,6 +194,43 @@ a:visited {
   .testimonial,
   .footer {
     grid-column: col-start 1 / col-end 8;
+  }
+
+  .product,
+  .testimonial,
+  .footer {
+    grid-gap: 1.8rem;
+  }
+
+  .product {
+    margin: calc(2rem + 2.5vw);
+    margin-bottom: none;
+  }
+
+  .product__details--title {
+    font-size: 4rem;
+  }
+
+  .product__reviews--card {
+    padding: calc(1rem + 0.5vw);
+  }
+
+  .product__reviews--card__rating {
+    margin-right: 1rem;
+  }
+
+  .testimonial {
+    grid-template-columns: repeat(1, 1fr);
+    place-content: start;
+    margin-top: -7rem;
+  }
+
+  .testimonial__card--2 {
+    margin-top: unset;
+  }
+
+  .testimonial__card--3 {
+    margin-top: unset;
   }
 }
 
@@ -255,7 +299,7 @@ a:visited {
 
   .testimonial {
     grid-template-columns: repeat(1, 1fr);
-    margin-top: initial;
+    margin-top: -3rem;
     margin-bottom: 5rem;
   }
 }
