--- a/CSS-HTML-projects/sunnyside-agency/style.css
+++ b/CSS-HTML-projects/sunnyside-agency/style.css
@@ -33,8 +33,9 @@ a:visited {
 .hidden {
   display: none;
 }
-.hidden--image {
-  display: none;
+
+.active {
+  display: unset;
 }
 
 li {
@@ -44,16 +45,15 @@ li {
 body {
   font-size: 1.3rem;
   font-family: 'Barlow', sans-serif;
-  /* font-family: 'Fraunces', serif; */
 }
 
 .container {
   display: grid;
   grid-template-columns: repeat(12, [col-start] 1fr [col-end]);
-  grid-template-rows: 50vh repeat(4, min-content);
+  grid-template-rows: minmax(55vh, 65vh) repeat(4, min-content);
 }
 
-.header,
+.hero,
 .services,
 .testimonials,
 .gallery,
@@ -61,11 +61,92 @@ body {
   grid-column: col-start 1 / col-end 12;
 }
 
-.header {
-  background-image: url('./images/mobile/image-header.jpg');
+.hero {
+  background-image: url('./images/desktop/image-header.jpg');
   background-repeat: no-repeat;
-  /* background-position: ; */
+  background-position: center;
   background-size: cover;
+
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.hero__header {
+  display: flex;
+  width: 100%;
+}
+
+.hero__header--nav {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 10rem;
+  line-height: 10rem;
+}
+
+.hero__header--nav__logo {
+  width: inherit;
+  display: flex;
+  align-items: center;
+  margin-left: calc(2rem + 2vw);
+}
+
+.hero__header--nav__list {
+  width: inherit;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: calc(2rem + 2vw);
+}
+
+.hero__header--nav__list--item {
+  align-self: center;
+}
+
+.hero__header--nav__list--item a {
+  margin-right: calc(2rem + 1vw);
+  padding: 2rem;
+  font-size: calc(1rem + 0.5vw);
+  color: var(--color-white);
+}
+
+.hero__header--nav__contact--btn {
+  padding: 1.5rem 2rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+  font-family: 'Fraunces', serif;
+  font-weight: 300;
+  border-radius: 2rem;
+  border: none;
+  cursor: pointer;
+  transition: all 0.5s ease-in-out;
+  background-color: var(--color-white);
+}
+
+.hero__header--nav__contact--btn:hover,
+.hero__header--nav__contact--btn:active {
+  color: var(--color-white);
+  background-color: var(--color-secondary-dark);
+  opacity: 0.8;
+}
+
+.hero__main {
+  width: 100%;
+  height: 20vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero__main--title {
+  font-family: 'Fraunces', serif;
+  font-size: calc(2rem + 2vw);
+  text-transform: uppercase;
+  letter-spacing: 0.5rem;
+  word-spacing: 0.5rem;
+  color: var(--color-white);
 }
 
 .services {
@@ -128,7 +209,6 @@ body {
   font-size: calc(2.5rem + 1vw);
   font-weight: 700;
   margin-bottom: calc(1rem + 1.5vw);
-  line-height: 1.2;
 }
 
 .services__card--para {
@@ -258,11 +338,8 @@ body {
 }
 
 .footer__heading--title {
-  font-family: 'Fraunces', serif;
-  text-transform: lowercase;
-  font-weight: 600;
   font-size: calc(1.5rem + 1vw);
-  color: var(--color-secondary);
+  color: var(--color-secondary-dark);
 }
 
 .footer__links {
@@ -277,6 +354,12 @@ body {
   font-weight: 300;
   color: var(--color-secondary);
   opacity: 0.7;
+  cursor: pointer;
+}
+
+.footer__links--para:hover,
+.footer__links--para:active {
+  color: var(--color-white);
 }
 
 .footer__social {
@@ -294,8 +377,13 @@ body {
   align-items: center;
 }
 
-.footer__social--list__item a img {
+.footer__social--list__item {
   color: var(--color-secondary-dark);
+}
+
+.footer__social--list__item a img:hover,
+.footer__social--list__item a img:active {
+  color: var(--color-white);
 }
 
 .footer__attribution {
@@ -317,12 +405,29 @@ body {
     grid-template-columns: repeat(8, [col-start] 1fr [col-end]);
   }
 
-  .header,
+  .hero,
   .services,
   .testimonials,
   .gallery,
   .footer {
     grid-column: col-start 1 / col-end 8;
+  }
+
+  .hero__header--nav__logo {
+    margin-left: calc(2rem + 1vw);
+  }
+
+  .hero__header--nav__list {
+    margin-right: calc(2rem + 1vw);
+  }
+
+  .hero__header--nav__list--item a {
+    margin-right: 1rem;
+    font-size: calc(1rem + 0.7vw);
+  }
+
+  .hero__header--nav__contact--btn {
+    padding: 1rem 1.5rem;
   }
 }
 
@@ -330,9 +435,10 @@ body {
   .container {
     display: grid;
     grid-template-columns: repeat(4, [col-start] 1fr [col-end]);
+    grid-template-rows: 50vh repeat(4, min-content);
   }
 
-  .header,
+  .hero,
   .services,
   .testimonials,
   .gallery,
@@ -340,8 +446,62 @@ body {
     grid-column: col-start 1 / col-end 4;
   }
 
-  .header {
+  .hero {
     background-image: url('./images/mobile/image-header.jpg');
+  }
+
+  .hero__header--hamburger {
+    display: block;
+    position: fixed;
+    right: calc(3rem + 2vw);
+    top: 4rem;
+    cursor: pointer;
+  }
+
+  .hero__header--nav__logo {
+    margin-left: calc(2rem + 2vw);
+  }
+
+  .hero__header--nav__list {
+    margin-right: calc(2rem + 2vw);
+  }
+
+  .hero__main {
+    height: 25vh;
+  }
+
+  .hero__main--title {
+    font-size: calc(3rem + 3vw);
+    text-align: center;
+    line-height: 1.5;
+  }
+
+  .hero__header--nav__list {
+    position: fixed;
+    top: 10rem;
+    height: 30rem;
+    width: calc(80vw + 3vw);
+    flex-direction: column;
+    background-color: var(--color-white);
+    margin-right: unset;
+    justify-content: space-evenly;
+    line-height: initial;
+    opacity: 0;
+
+    transition: all 1s ease-in-out;
+  }
+
+  .hero__header--nav__list--item a {
+    color: var(--color-tertiary);
+    margin-right: unset;
+    font-size: calc(1.5rem + 0.5vw);
+    padding: unset;
+  }
+
+  .hero__header--nav__contact--btn {
+    padding: 1.5rem 2rem;
+    font-size: 1.2rem;
+    background-color: var(--color-primary-m);
   }
 
   .services {
