--- a/CSS-HTML-projects/loopstudios/style.css
+++ b/CSS-HTML-projects/loopstudios/style.css
@@ -28,7 +28,7 @@ li {
 }
 
 .hidden {
-  /* display: none; */
+  display: none;
 }
 
 a:link,
@@ -51,6 +51,9 @@ a:visited {
 
 .hero {
   background-image: url('./images/desktop/image-hero.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 
   display: flex;
   flex-direction: column;
@@ -66,15 +69,24 @@ a:visited {
   width: 80%;
 }
 
-.hero__header--title {
-  width: 100%;
-  justify-self: flex-start;
+.hero__header--hamburger {
+  display: none;
+  position: absolute;
+  right: 0;
+  margin-right: calc(5%);
+  cursor: pointer;
 }
 
 .hero__header--nav {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  width: 100%;
+}
+
+.hero__header--nav__logo {
+  width: 100%;
+  justify-self: flex-start;
+  align-self: center;
 }
 
 .hero__header--nav ul {
@@ -86,6 +98,7 @@ a:visited {
   font-family: 'Alata', sans-serif;
   margin-right: 3rem;
   font-size: 1.5rem;
+  align-self: center;
 }
 
 .hero__main {
@@ -98,7 +111,7 @@ a:visited {
 .hero__main--content {
   max-width: 40%;
   padding: 2rem calc(1rem + 1vw);
-  border: 0.3rem solid var(--color-white);
+  border: 0.2rem solid var(--color-white);
 }
 
 .hero__main--title {
@@ -313,6 +326,10 @@ a:visited {
   margin-right: 2.5rem;
 }
 
+.footer__content--menu p:nth-child(5) {
+  margin-right: initial;
+}
+
 .footer__socials {
   display: flex;
   flex-direction: column;
@@ -322,11 +339,17 @@ a:visited {
 .footer__socials--icons {
   display: flex;
   align-items: center;
-  align-self: flex-end;
+
+  justify-content: flex-end;
+}
+
+.footer__socials--icons li {
+  margin-left: 1.5rem;
+  justify-self: flex-end;
 }
 
 .footer__socials--icons li a {
-  margin-right: 1.5rem;
+  margin-left: 1.5rem;
 }
 
 .footer__content--title,
@@ -338,6 +361,7 @@ a:visited {
   color: var(--color-gray);
   font-weight: 300;
   align-self: center;
+  text-align: end;
 }
 .footer__attribution {
   text-align: center;
@@ -379,6 +403,19 @@ a:visited {
   .hero__main--content {
     max-width: 60%;
   }
+
+  .footer-container {
+    padding: 1rem;
+  }
+
+  .footer__content {
+    width: 70%;
+  }
+
+  .footer__content--menu p {
+    font-weight: 400;
+    margin-right: 2rem;
+  }
 }
 
 /*==========  Media query => mobile ==========*/
@@ -392,6 +429,47 @@ a:visited {
   .company,
   .gallery {
     grid-column: col-start 1 / col-end 4;
+  }
+
+  .hero {
+    background-image: url('./images/mobile/image-hero.jpg');
+  }
+
+  /* .hero__header,
+  .hero__main {
+    width: 90%;
+  } */
+
+  .hero__main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .hero__main--content {
+    max-width: 90vw;
+    padding: 2rem calc(1rem + 1vw);
+  }
+
+  .hero__main--title {
+    font-size: calc(3rem + 3vw);
+    letter-spacing: 0.2rem;
+    line-height: 1;
+  }
+
+  .hero__header--hamburger {
+    display: initial;
+  }
+
+  .hero__header--nav ul {
+    display: none;
+  }
+
+  .hero__header--nav ul li {
+    margin-right: initial;
+    margin-bottom: 3rem;
+    align-self: initial;
+    font-size: calc(1.5rem + 1vw);
   }
 
   .gallery {
@@ -473,38 +551,34 @@ a:visited {
     background-image: url('./images/mobile/image-fisheye.jpg');
   }
 
-  .hero {
-    background-image: url('./images/mobile/image-hero.jpg');
+  .footer {
+    align-items: center;
   }
 
-  .hero__main--content {
-    max-width: 70%;
-  }
-
-  .hero__header--hamburger {
-    position: absolute;
-    right: 0;
-    margin-right: calc(5%);
-  }
-
-  .hero__header--nav {
-    position: fixed;
+  .footer-container {
     flex-direction: column;
-    align-items: flex-start;
-    background-color: var(--color-black);
-    justify-content: center;
-    width: 100vw;
-    height: 100vh;
-    display: none;
+    align-items: center;
+    padding: 5rem 2rem;
   }
 
-  .hero__header--nav ul {
+  .footer__content,
+  .footer__socials {
+    width: initial;
+  }
+
+  .footer__content {
+    width: initial;
+    margin-bottom: calc(1rem + 1.5vw);
+  }
+
+  .footer__content--menu {
     flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
+    align-items: center;
   }
 
-  .open .hero__header--hamburger {
-    display: unset;
+  .footer__content--menu p {
+    margin-right: initial;
+    margin-bottom: 2.5rem;
+    font-size: calc(1rem + 1vw);
   }
 }
