--- a/js-micro-components/pricing-component/style.css
+++ b/js-micro-components/pricing-component/style.css
@@ -10,17 +10,26 @@
   font-size: 62.5%;
 
   /* custom Properties */
-  --linear-gradient-style: ;
+  --linear-gradient-style: hsl(236, 72%, 79%), hsl(237, 63%, 64%);
   --color-primary-light-m: hsl(240, 78%, 98%);
   --color-primary-light: hsl(234, 14%, 74%);
   --color-primary-dark: hsl(233, 13%, 49%);
   --color-primary-dark-m: hsl(232, 13%, 33%);
 }
 
+.hidden {
+  display: hidden;
+}
+
 body {
-  /* font-family: 'Montserrat', sans-serif; */
+  font-family: 'Montserrat', sans-serif;
   font-size: 1.2rem;
   font-weight: 300;
+
+  background-color: var(--color-primary-light-m);
+  background-image: url('./images/bg-top.svg'), url('./images/bg-bottom.svg');
+  background-repeat: no-repeat, no-repeat;
+  background-position: top right, bottom left;
 }
 
 .container {
@@ -30,15 +39,168 @@ body {
   grid-template-rows: min-content 1fr min-content;
 }
 
-.section,
+a:link,
+a:visited {
+  text-decoration: none;
+  color: black;
+}
+
+.header,
 .pricing,
 .footer {
   grid-column: col-start 1 / col-end 12;
 }
 
-a:link,
-a:visited {
-  text-decoration: none;
+.header {
+  padding-top: 7rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header__heading--title {
+  font-size: 3rem;
+  color: var(--color-primary-dark-m);
+}
+
+.header__content {
+  display: flex;
+  align-items: center;
+}
+
+.header__content p,
+.header__content div {
+  margin-right: 2rem;
+  padding: 2rem;
+  color: var(--color-primary-light);
+  font-size: 1.3rem;
+}
+
+.header__heading {
+  margin-bottom: 3rem;
+}
+
+.pricing {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 6rem;
+}
+
+.pricing-container {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(25rem, 30rem));
+  grid-template-rows: repeat(auto-fill, minmax(30rem, 35rem));
+}
+
+.pricing__card {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  border-radius: 1rem;
+  background-color: #ffffff;
+}
+
+.pricing__card:nth-child(2) {
+  background: linear-gradient(hsl(236, 72%, 79%), hsl(237, 63%, 64%));
+  transform: scale(1.1);
+  color: #ffffff;
+}
+
+.pricing__card--header {
+  display: flex;
+  flex-direction: column;
+  height: 30%;
+}
+
+.pricing__card--details {
+  height: 60%;
+  width: 90%;
+  /* margin-bottom: 2rem; */
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.pricing__card--details p {
+  font-size: 1.3rem;
+  font-weight: 500;
+  padding: 1.7rem 0;
+  border-top: solid 0.1rem var(--color-primary-light);
+  width: 100%;
+  text-align: center;
+}
+
+.pricing__card--details p:last-child {
+  border-bottom: solid 0.1rem var(--color-primary-light);
+}
+
+.pricing__card--details:nth-child(2) p {
+  border-top: solid 0.1rem #ffffff;
+}
+
+.pricing__card--details:nth-child(2) p:last-child {
+  border-bottom: solid 0.1rem #ffffff;
+}
+
+.pricing__card--more {
+  height: 10%;
+  width: 90%;
+  display: flex;
+  justify-content: center;
+}
+
+.pricing__card--more button {
+  width: 100%;
+  text-transform: uppercase;
+  font-size: 1rem;
+  letter-spacing: 0.1rem;
+  font-weight: 700;
+  border: none;
+  outline: none;
+  border-radius: 0.5rem;
+  color: #ffffff;
+  background: linear-gradient(--linear-gradient-style);
+  cursor: pointer;
+}
+
+.pricing__card--more button:hover,
+.pricing__card--more button:active {
+  background-color: transparent;
+  color: var(--color-primary-dark);
+}
+
+.pricing__card--more button:hover,
+.pricing__card--more button:active {
+  color: var(--color-primary-dark);
+  border: 0.1rem solid var(--color-primary-dark);
+}
+
+.pricing__card--more:nth-child(2) button:hover,
+.pricing__card--more:nth-child(2) button:active {
+  background-color: transparent;
+  color: #ffffff;
+  border: 0.1rem solid #ffffff;
+}
+
+.footer {
+  padding: 1.5rem;
+  background-color: var(--color-primary-dark);
+  color: #ffffff;
+  font-family: initial;
+  font-size: 1.4rem;
+  line-height: 1.3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer__attribution {
+  text-align: center;
+  letter-spacing: 0.1rem;
 }
 
 /*=============  Media Query => Tablet   ==========*/
@@ -47,22 +209,51 @@ a:visited {
     grid-template-columns: repeat(8, [col-start] 1fr [col-end]);
   }
 
-  .section,
+  .header,
   .pricing,
   .footer {
     grid-column: col-start 1 / col-end 8;
   }
+
+  .pricing-container {
+    grid-template-columns: repeat(3, minmax(18rem, 25rem));
+    margin: 0 calc(2rem + 2vw);
+  }
 }
 
 /*=============  Media Query => mobile   ==========*/
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 600px) {
   .container {
     grid-template-columns: repeat(4, [col-start] 1fr [col-end]);
   }
 
-  .section,
+  .header,
   .pricing,
   .footer {
     grid-column: col-start 1 / col-end 4;
+  }
+
+  .pricing {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 6rem 0;
+  }
+
+  .pricing-container {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    margin: initial;
+    grid-template-rows: repeat(3, minmax(25rem, 35rem));
+    min-width: 80%;
+  }
+
+  .pricing__card {
+    margin-bottom: 2rem;
+    padding: 2375 rem 1rem;
+  }
+
+  .pricing__card:nth-child(2) {
+    transform: initial;
   }
 }
