--- a/js-micro-components/social-dashboard/style.css
+++ b/js-micro-components/social-dashboard/style.css
@@ -37,6 +37,8 @@
 body {
   font-size: 1.4rem;
   font-family: 'Inter', sans-serif;
+
+  background-color: var(--color-light-bg);
 }
 
 a:link,
@@ -48,13 +50,35 @@ a:visited {
   min-height: 100vh;
   display: grid;
   grid-template-columns: repeat(12, [col-start] 1fr [col-end]);
-  grid-template-rows: repeat(2, minmax(min-content, 1fr)) min-content;
+  grid-template-rows: 1fr min-content;
 }
 
 .socials,
-.overview,
 .footer {
   grid-column: col-start 1 / col-end 12;
+}
+
+.socials {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.socials-container {
+  display: grid;
+  grid-template-columns: repeat(
+    4,
+    [social-start] minmax(22rem, 28rem) [social-end]
+  );
+  grid-template-rows: min-content minmax(15rem, 20rem) min-content repeat(
+      2,
+      minmax(10rem, 15rem)
+    );
+  place-items: center;
+  grid-gap: 2.4rem;
+}
+
+.socials__header {
+  grid-column: social-start 1 / social-end 4;
 }
 
 .footer {
@@ -81,6 +105,20 @@ a:visited {
   .footer {
     grid-column: col-start 1 / col-end 8;
   }
+
+  .socials-container {
+    grid-template-columns: repeat(2, minmax(min-content, 1fr));
+    grid-template-rows: min-content repeat(2, minmax(15rem, 20rem)) min-content repeat(
+        4,
+        minmax(10rem, 15rem)
+      );
+    grid-gap: 1.8rem;
+    width: 90vw;
+  }
+
+  .socials__header {
+    grid-column: 1 / 3;
+  }
 }
 
 /*=============  Media Query => mobile ========*/
@@ -93,5 +131,18 @@ a:visited {
   .overview,
   .footer {
     grid-column: col-start 1 / col-end 4;
+  }
+
+  .socials-container {
+    grid-template-columns: 1fr;
+    grid-template-rows: min-content repeat(auto-fill, minmax(15rem, 20rem)) min-content repeat(
+        auto-fill,
+        minmax(10rem, 15rem)
+      );
+    grid-gap: 1.6rem;
+  }
+
+  .socials__header {
+    grid-column: initial;
   }
 }
