--- a/js-micro-components/social-dashboard/style.css
+++ b/js-micro-components/social-dashboard/style.css
@@ -6,39 +6,55 @@
   box-sizing: border-box;
 }
 
-:root {
+html {
   font-size: 62.5%;
 
   /* Custom Properties */
   --color-twitter: hsl(203, 89%, 53%);
   --color-facebook: hsl(208, 92%, 53%);
-  --color-instagram: linear gradient hsl(37, 97%, 70%) to hsl(329, 70%, 58%);
+  --color-instagram: linear-gradient(to hsl(37, 97%, 70%), hsl(329, 70%, 58%));
   --color-youtube: hsl(348, 97%, 39%);
 
   /* Light mode button  */
-  --color-toggle-dark: linear gradient hsl(210, 78%, 56%) to hsl(146, 68%, 55%);
-  --color-toggle-light: hsl(230, 22%, 74%);
-
-  /* Dark Theme */
-  --color-dark-bg: hsl(230, 17%, 14%);
-  --color-dark-bg-pattern: hsl(232, 19%, 15%);
-  --color-dark-card: hsl(228, 28%, 20%);
-  --color-dark-text: hsl(228, 34%, 66%);
-  --color-dark-text-m: hsl(0, 0%, 100%);
+  --color-toggle: hsl(230, 22%, 74%);
 
   /* Light Theme */
-  --color-light-bg: hsl(0, 0%, 100%);
-  --color-light-bg-pattern: hsl(225, 100%, 98%);
-  --color-light-card: hsl(227, 47%, 96%);
-  --color-light-text: hsl(228, 12%, 44%);
-  --color-light-text-m: hsl(230, 17%, 14%);
+  --color-bg: hsl(0, 0%, 100%);
+  --color-bg-pattern: hsl(225, 100%, 98%);
+  --color-card: hsl(227, 47%, 96%);
+  --color-text: hsl(228, 12%, 44%);
+  --color-text-m: hsl(230, 17%, 14%);
+  --color-decrease: hsl(356, 69%, 56%);
+  --color-increase: hsl(163, 72%, 41%);
+  --color-footer-bg: hsl(275, 63%, 69%);
+  --color-footer-text: #000000;
+  --color-footer-link: #ffffff;
+}
+
+html[data-theme='dark'] {
+  /* Dark Theme */
+  --color-bg: hsl(230, 17%, 14%);
+  --color-bg-pattern: hsl(232, 19%, 15%);
+  --color-card: hsl(228, 28%, 20%);
+  --color-text: hsl(228, 34%, 66%);
+  --color-text-m: hsl(0, 0%, 100%);
+
+  --color-toggle: linear-gradient(to hsl(210, 78%, 56%), hsl(146, 68%, 55%));
+}
+
+html.transition,
+html.transition *,
+html.transition *::before,
+html.transition *::after {
+  transition: all 0.5s !important;
+  transition-delay: 0s !important;
 }
 
 body {
   font-size: 1.4rem;
   font-family: 'Inter', sans-serif;
 
-  background-color: var(--color-light-bg);
+  background-color: var(--color-bg);
 }
 
 a:link,
@@ -75,23 +91,187 @@ a:visited {
     );
   place-items: center;
   grid-gap: 2.4rem;
+
+  margin: 5vh 0;
+  margin-bottom: 10vh;
 }
 
 .socials__header {
   grid-column: social-start 1 / social-end 4;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 2rem 0;
+}
+
+.socials__header--content h1 {
+  font-size: 3rem;
+  margin-bottom: 0.6rem;
+  color: var(--color-text-m);
+}
+
+.socials__header--content p {
+  font-size: 1.3rem;
+  color: var(--color-text);
+  font-weight: 700;
+}
+
+.socials__header--toggle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.socials__header--toggle p {
+  margin-right: 2rem;
+  font-weight: 400;
+  color: var(--color-text);
+}
+
+.socials__overview--header {
+  justify-content: initial;
+}
+
+.socials__overview--header h2 {
+  color: var(--color-text);
+}
+
+.socials__card {
+  background-color: var(--color-card);
+  width: 100%;
+  height: 100%;
+  border-radius: 0.5rem;
+  border-top: solid 0.3rem;
+  padding: 2.5rem 0;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.socials__card:first-child {
+  border-top-color: var(--color-facebook);
+}
+
+.socials__card:nth-child(2) {
+  border-top-color: var(--color-twitter);
+}
+
+.socials__card:nth-child(3) {
+  border-top-color: var(--color-instagram);
+}
+
+.socials__card:nth-child(4) {
+  border-top-color: var(--color-youtube);
+}
+
+.socials__card--user {
+  display: flex;
+}
+
+.socials__card--user img {
+  margin-right: 1rem;
+}
+
+.socials__card--user p {
+  font-size: 1.3rem;
+  font-weight: 700;
+  color: var(--color-text);
+}
+
+.social__card--followers {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  padding: 1rem 0;
+}
+
+.social__card--followers h2 {
+  font-size: 4.5rem;
+}
+
+.social__card--followers p {
+  color: var(--color-text);
+  text-transform: uppercase;
+  font-size: 1.2rem;
+  letter-spacing: 0.5rem;
+}
+
+.social__card--stat {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social__card--stat img {
+  object-fit: contain;
+  margin-right: 0.5rem;
+}
+
+.socials__card--increase,
+.socials__card--decrease {
+  font-size: 1.3rem;
+  font-weight: 700;
+}
+
+.socials__card--increase {
+  color: var(--color-increase);
+}
+
+.socials__card--decrease {
+  color: var(--color-decrease);
+}
+
+.socials__card--overview {
+  border-top: initial;
+  padding: 1.5rem 2rem;
+}
+
+.socials__card--overview__header,
+.socials__card--overview__content {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 50%;
+}
+
+.socials__card--overview__header h3 {
+  font-size: 1.4rem;
+  color: var(--color-text);
+}
+
+.socials__card--overview__content h3 {
+  color: var(--color-text-m);
+  font-size: 2.5rem;
+}
+
+.socials__card--overview__content--logo {
+  display: flex;
+  justify-content: center;
+}
+.socials__card--overview__content--logo img {
+  object-fit: contain;
+  margin-right: 0.4rem;
 }
 
 .footer {
   padding: 1.5rem;
   display: flex;
   justify-content: center;
-  background-color: rgb(185, 127, 226);
+  background-color: var(--color-footer-bg);
 }
 
 .footer__attribution {
   font-size: 1.4rem;
   line-height: 1.2;
   text-align: center;
+}
+.footer__attribution a {
+  color: var(--color-footer-link);
 }
 
 /*=============  Media Query => Tablet ========*/
@@ -119,6 +299,12 @@ a:visited {
   .socials__header {
     grid-column: 1 / 3;
   }
+
+  .socials__header--content h1 {
+    font-size: 2rem;
+    margin-bottom: 0.6rem;
+    color: var(--color-text-m);
+  }
 }
 
 /*=============  Media Query => mobile ========*/
@@ -135,8 +321,8 @@ a:visited {
 
   .socials-container {
     grid-template-columns: 1fr;
-    grid-template-rows: min-content repeat(auto-fill, minmax(15rem, 20rem)) min-content repeat(
-        auto-fill,
+    grid-template-rows: min-content repeat(4, minmax(15rem, 20rem)) min-content repeat(
+        8,
         minmax(10rem, 15rem)
       );
     grid-gap: 1.6rem;
@@ -144,5 +330,26 @@ a:visited {
 
   .socials__header {
     grid-column: initial;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: initial;
+  }
+
+  .socials__header--content,
+  .socials__header--toggle {
+    padding: 1.5rem 0;
+  }
+
+  .socials__header--content {
+    border-bottom: solid 0.1rem var(--color-text-m);
+  }
+
+  .socials__header--toggle {
+    justify-content: space-between;
+  }
+
+  .socials__overview--header {
+    justify-content: initial;
+    flex-direction: initial;
   }
 }
