--- a/CSS-HTML-projects/insure-landing-page/style.css
+++ b/CSS-HTML-projects/insure-landing-page/style.css
@@ -69,6 +69,12 @@ a:visited {
   width: 80%;
 }
 
+.header__hamburger {
+  display: initial;
+  position: fixed;
+  cursor: pointer;
+}
+
 .header__nav {
   display: flex;
   width: 100%;
@@ -188,19 +194,40 @@ a:visited {
 
   .header-container {
     width: 100%;
+    margin: initial;
   }
 
   .header__nav {
     justify-content: initial;
+    position: relative;
+    /* width: inherit; */
+  }
+
+  .header__nav--logo {
+    /* width: 100%; */
+    margin: 0 calc(2em + 1.5vw);
+  }
+
+  .header__hamburger {
+    right: calc(2rem + 1.5vw);
+    cursor: pointer;
+  }
+  .header__hamburger img {
+    cursor: pointer;
   }
 
   .header__nav--menu {
     position: fixed;
     margin-top: 10rem;
     height: 100vh;
+    width: 100vw;
     flex-direction: column;
     background-color: var(--color-primary-dark);
-    width: 100%;
+    display: none;
+  }
+
+  .open .header__nav--menu {
+    display: initial;
   }
 
   .header__nav--menu li {
@@ -209,12 +236,26 @@ a:visited {
 
   .header__nav--menu li a,
   .header__nav--menu li:last-child a {
-    padding: 1rem;
-    text-transform: uppercase;
-    font-size: 1.2rem;
-    font-weight: 700;
-    letter-spacing: 0.1rem;
+    /* padding: 1rem; */
+    font-size: 1.7rem;
     color: var(--color-secondary-light);
-    transition: all 0.5s ease-in-out;
+  }
+
+  .header__nav--menu li a:hover,
+  .header__nav--menu li a:active {
+    color: var(--color-secondary-dark);
+  }
+
+  .header__nav--menu li:last-child a {
+    padding: 1rem 6rem;
+    width: 85%;
+    border-color: var(--color-secondary-light);
+    text-align: center;
+  }
+
+  .header__nav--menu li:last-child a:hover,
+  .header__nav--menu li:last-child a:active {
+    background-color: var(--color-secondary-light);
+    color: var(--color-primary);
   }
 }
