completed company motto, responsive across all screen sizes

--- a/CSS-HTML-projects/insure-landing-page/style.css
+++ b/CSS-HTML-projects/insure-landing-page/style.css
@@ -19,7 +19,6 @@
 
 body {
   font-size: 1.5rem;
-  /* font-family: 'DM Serif Display', serif; */
 
   font-family: 'Karla', sans-serif;
 }
@@ -70,7 +69,6 @@ a:visited {
 }
 
 .header__hamburger {
-  display: initial;
   position: fixed;
   cursor: pointer;
 }
@@ -108,18 +106,113 @@ a:visited {
   color: var(--color-primary-dark);
 }
 
-.header__nav--menu li:last-child a {
+.header__nav--menu li:last-child a,
+.company__work--more a {
   border: 0.2rem var(--color-primary-dark) solid;
   padding: 1rem 2.5rem;
   font-size: 1.1rem;
   background-color: transparent;
-  /* cursor: pointer; */
+  cursor: pointer;
 }
 
 .header__nav--menu li:last-child a:hover,
 .header__nav--menu li:last-child a:active {
   background-color: var(--color-primary-dark);
   color: var(--color-secondary-light);
+}
+
+.company {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.company-container {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(17rem, 30rem));
+  grid-template-rows: minmax(15rem, 20rem) minmax(17rem, 30rem) minmax(
+      15rem,
+      20rem
+    );
+  grid-gap: 2.4rem;
+  place-content: center;
+  /* margin: 0rem calc(2rem); */
+}
+
+.company__header,
+.company__work {
+  grid-column: 1 / 4;
+  padding: 3rem 0;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.company__work {
+  background-color: var(--color-primary);
+  background: url('./images/bg-pattern-how-we-work-desktop.svg'),
+    var(--color-primary);
+  background-repeat: no-repeat;
+  background-position: right;
+  background-size: contain;
+  padding: 4rem;
+}
+
+.company__motto {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  /* justify-content: space-evenly; */
+}
+
+.company__motto--header {
+  margin-bottom: 2rem;
+}
+
+.company__motto--content h3 {
+  font-family: 'DM Serif Display', serif;
+  margin-bottom: 1.5rem;
+}
+
+.company__motto--content p {
+  font-size: 1.3rem;
+  color: var(--color-secondary-dark);
+}
+
+.company__header--title,
+.company__work--title {
+  font-size: 5rem;
+  letter-spacing: 0.1rem;
+  font-family: 'DM Serif Display', serif;
+}
+
+.company__work {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.company__work--title {
+  line-height: 1.3;
+  font-size: 3.5rem;
+  width: 45%;
+
+  color: var(--color-secondary-light);
+}
+
+.company__work--more a {
+  border-color: var(--color-secondary-light);
+  font-size: 1.2rem;
+  border-width: 0.1rem;
+  color: var(--color-secondary-light);
+  text-transform: uppercase;
+}
+
+.company__work--more a:hover,
+.company__work--more a:active {
+  color: var(--color-primary);
+  background-color: var(--color-secondary-light);
+  transition: all 0.5s ease-in-out;
 }
 
 .attribution {
@@ -173,6 +266,42 @@ a:visited {
 
   .header__nav--menu li:last-child a {
     padding: 0.9rem 2rem;
+  }
+
+  .company-container {
+    grid-template-columns: 1fr;
+    grid-template-rows: 15rem repeat(3, minmax(17rem, 25rem)) 20rem;
+    grid-gap: 1.8rem;
+    margin: initial;
+  }
+
+  .company__motto {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .company__header,
+  .company__work {
+    grid-column: initial;
+    justify-content: center;
+  }
+
+  .company__work {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .company__header--title {
+    font-size: 4rem;
+  }
+
+  .company__work--title {
+    line-height: 1;
+    font-size: 3rem;
+    width: 60%;
+    text-align: center;
+    margin-bottom: 5rem;
   }
 }
 
@@ -257,5 +386,16 @@ a:visited {
   .header__nav--menu li:last-child a:active {
     background-color: var(--color-secondary-light);
     color: var(--color-primary);
+  }
+
+  .company-container {
+    grid-gap: 1.6rem;
+    width: 90%;
+  }
+
+  .company__work--title {
+    font-size: 2.5rem;
+    margin-bottom: 4rem;
+    width: 100%;
   }
 }
