completed toggle button for pricing component

--- a/js-micro-components/social-dashboard/style.css
+++ b/js-micro-components/social-dashboard/style.css
@@ -123,6 +123,15 @@ a:visited {
   align-items: center;
 }
 
+.toggle--input {
+  /* padding: 1.5rem 4rem; */
+  height: 2rem;
+  opacity: 0;
+}
+
+.toggle--slider {
+}
+
 .socials__header--toggle p {
   margin-right: 2rem;
   font-weight: 400;
